Actions
Bug #8722
closedloader: __divmoddi4 should check for NULL pointer
Start date:
2017-10-17
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
The argument r may be NULL pointer and we should check it.
Thanks to Jürgen Startek for spotting it.
Updated by Electric Monk about 6 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 402902c369e6ee05f7df0a98b4987d5916b654c3
commit 402902c369e6ee05f7df0a98b4987d5916b654c3 Author: Toomas Soome <tsoome@me.com> Date: 2017-10-17T16:53:58.000Z 8722 loader: __divmoddi4 should check for NULL pointer Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions